<resources>

    <string name="app_name">ACapp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">ACapp</string>
    <string name="btn_weiboLogin">新浪微博登陆</string>
    <string name="btn_weiboCancel">新浪微博注销</string>
    <string name="btn_qqLogin">QQ登陆</string>
    <string name="btn_qqCancel">QQ注销</string>

</resources>